[package]
name = "kontawa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.11.0"
egui-wgpu = "0.20"
egui-winit = "0.20"
winit_input_helper = "0.13"
egui = "0.20"
log = "0.4.17"
glam = "0.23.0"
rayon = "1.7.0"
cpal = "0.15.2"
audio-processor-analysis = "2.1.0"
audio-processor-traits = "4.1.0"

